alignment fixed

--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ main {
     display: flex;
     border-radius: 8px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
-    margin: auto;
     max-width: 307px;
     padding: 48px;
 }
